# tablix-operators

./: 1.html  Operators Graphic.xls  export.sh  modules.txt  pref.sh  preference.xml  real.sh  real.xml  result0.xml  result1.xml  room.sh  room_avail.xml  test.sh  test.xml
tablix2-0.3.5/: AUTHORS  BUGS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  acinclude.m4  aclocal.m4  config.h.in  configure  configure.in
tablix2-0.3.5/debian/: Makefile.am  Makefile.in  changelog  control  copyright  rules  tablix2-dev.examples  tablix2-dev.install  tablix2-doc.docs  tablix2.docs  tablix2.examples  tablix2.manpages
tablix2-0.3.5/doc/: Doxyfile  Makefile.am  Makefile.in  makedoc  manual.db  mod-doc2.pl  modulegroups  modules.db  modules2.db  modulesref.xml  modulesref2r0.dtd  morphix.db  tablix-html.dsl  tablix-print.dsl  tablix.css  tablix2.1  tablix2_benchmark.1  tablix2_kernel.1  tablix2_output.1  tablix2_plot.1  tablix2_test.1
tablix2-0.3.5/doc/doxygen/html/: annotated.html  cache_8c.html  cache_8h.html  cache_8h__dep__incl.map  cache_8h__dep__incl.md5  chromo_8c.html  chromo_8h.html  chromo_8h__dep__incl.map  chromo_8h__dep__incl.md5  data_8c.html  data_8h.html  data_8h__dep__incl.map  data_8h__dep__incl.md5  depend_8c.html  depend_8h.html  depend_8h__dep__incl.map  depend_8h__dep__incl.md5  error_8c.html  error_8h.html  error_8h__dep__incl.map  error_8h__dep__incl.md5  export_8h.html  files.html  functions.html  functions_vars.html  genetic_8c.html  globals.html  globals_func.html  globals_type.html  globals_vars.html  graph_legend.html  index.html  main_8c.html  modsup_8c.html  modsup_8h.html  modsup_8h__dep__incl.map  modsup_8h__dep__incl.md5  module_8h.html  output_8c.html  output_8h.html  (+61 more)
tablix2-0.3.5/doc/modules/: available.html  consecutive.html  events_sameday.html  firstlastequal.html  firstorlast.html  fixed.html  fixedtime.html  freemorning.html  freeperiod.html  holes.html  index.html  maxconsecutive.html  maxperday.html  minrooms.html  perday.html  placecapability.html  preferredroom.html  preferredtime.html  recurrence.html  sameday.html  sametime.html  sametimeas.html  simplesametime.html  timeblocks.html  timeblocks_sameday.html  timeplace.html  walk.html
tablix2-0.3.5/examples/: Makefile.am  Makefile.in  hint.xml  multi-week.xml  sample2.xml  style.css  tablix2r1.dtd  tough2.xml  uni.xml
tablix2-0.3.5/examples/modules/: Makefile  fixed-1.xml  fixed.c  fixed.xml  hello-1.xml  hello.c  hello.xml  holes.xml  row.c  row.xml
tablix2-0.3.5/export/: Makefile.am  Makefile.in  export_csv.c  export_efim.c  export_gnutu.c  export_htmlcss.c  export_htmlcss2.c  export_vcal.c  stripe.c  stripe.h  style2.c  style2.h
tablix2-0.3.5/modules/: Makefile.am  Makefile.in  available.c  consecutive.c  events_sameday.c  firstlastequal.c  firstorlast.c  fixed.c  fixedtime.c  freemorning.c  freeperiod.c  holes.c  maxconsecutive.c  maxperday.c  minrooms.c  perday.c  placecapability.c  preferredroom.c  preferredtime.c  recurrence.c  room_available.c  sameday.c  sametime.c  sametimeas.c  sametimelight.c  simplesametime.c  timeblocks.c  timeblocks_sameday.c  timeplace.c  walk.c
tablix2-0.3.5/po/: Makevars  POTFILES.in  sl.gmo  sl.po  tablix2.pot
tablix2-0.3.5/src/: Makefile.am  Makefile.in  assert.h  cache.c  cache.h  chromo.c  chromo.h  counter.c  counter.h  data.c  data.h  depend.c  depend.h  error-local.c  error-pvm.c  error.c  error.h  export.h  genetic.c  genetic.h  main.c  main.h  master.c  modsup.c  modsup.h  module.h  nodes.c  nodes.h  output.c  output.h  params.c  params.h  transfer.c  transfer.h  xmlsup.c  xmlsup.h
tablix2-0.3.5/ttf/: Makefile.am  Makefile.in  export_ttf.c  scheme.c  scheme.h  tablix2_test
tablix2-0.3.5/ttf/tests/: Makefile.am  Makefile.in  available-1.xml  bug-consecutive-fixedtime-1.xml  bug-consecutive-fixedtime-2.xml  bug-sametimeas-1.xml  bug-sametimeas-2.xml  consecutive-1.xml  consecutive-2.xml  error-1.xml  error-2.xml  error-3.xml  events-sameday-1.xml  firstlastequal-1.xml  firstorlast-1.xml  fixed-1.xml  fixedtime-1.xml  fixedtime-2.xml  fixedtime-3.xml  freemorning-1.xml  freemorning-2.xml  freeperiod-1.xml  freeperiod-2.xml  freeperiod-3.xml  holes-1.xml  holes-2.xml  maxconsecutive-1.xml  maxconsecutive-2.xml  maxconsecutive-3.xml  maxconsecutive-4.xml  maxperday-1.xml  maxperday-2.xml  minrooms-1.xml  perday-1.xml  placecapability-1.xml  preferredroom-1.xml  preferredroom-2.xml  preferredroom-3.xml  preferredroom-4.xml  preferredtime-1.xml  (+17 more)
tablix2-0.3.5/utils/: Makefile.am  Makefile.in  tablix2_benchmark  tablix2_plot
