#CFLAGS = -Wall -O2 -march=pentiumpro -g
AM_CFLAGS = -Wall -O2 -g

INCLUDES = -I../src -I.. -I../intl

pkglib_LTLIBRARIES = \
	timeplace.la \
	sametime.la \
	sametimelight.la \
	preferredtime.la \
	consecutive.la \
	holes.la \
	freeperiod.la \
	sametimeas.la \
	fixedtime.la \
	preferredroom.la \
	placecapability.la \
	sameday.la \
	freemorning.la \
	walk.la \
	perday.la \
	events_sameday.la \
	timeblocks.la \
	timeblocks_sameday.la \
	recurrence.la \
	available.la \
	room_available.la \
	simplesametime.la \
	minrooms.la \
	firstlastequal.la \
	firstorlast.la \
	maxconsecutive.la \
	maxperday.la \
	fixed.la

fixed_la_SOURCES = fixed.c
fixed_la_LDFLAGS = -module -avoid-version

maxperday_la_SOURCES = maxperday.c
maxperday_la_LDFLAGS = -module -avoid-version

maxconsecutive_la_SOURCES = maxconsecutive.c
maxconsecutive_la_LDFLAGS = -module -avoid-version

firstorlast_la_SOURCES = firstorlast.c
firstorlast_la_LDFLAGS = -module -avoid-version

firstlastequal_la_SOURCES = firstlastequal.c
firstlastequal_la_LDFLAGS = -module -avoid-version

minrooms_la_SOURCES = minrooms.c
minrooms_la_LDFLAGS = -module -avoid-version

simplesametime_la_SOURCES = simplesametime.c
simplesametime_la_LDFLAGS = -module -avoid-version

available_la_SOURCES = available.c
available_la_LDFLAGS = -module -avoid-version

room_available_la_SOURCES = room_available.c
room_available_la_LDFLAGS = -module -avoid-version


recurrence_la_SOURCES = recurrence.c
recurrence_la_LDFLAGS = -module -avoid-version

events_sameday_la_SOURCES = events_sameday.c
events_sameday_la_LDFLAGS = -module -avoid-version

preferredroom_la_SOURCES = preferredroom.c
preferredroom_la_LDFLAGS = -module -avoid-version

fixedtime_la_SOURCES = fixedtime.c
fixedtime_la_LDFLAGS = -module -avoid-version

freeperiod_la_SOURCES = freeperiod.c
freeperiod_la_LDFLAGS = -module -avoid-version

sametimeas_la_SOURCES = sametimeas.c
sametimeas_la_LDFLAGS = -module -avoid-version

timeplace_la_SOURCES = timeplace.c
timeplace_la_LDFLAGS = -module -avoid-version

sametime_la_SOURCES = sametime.c
sametime_la_LDFLAGS = -module -avoid-version

sametimelight_la_SOURCES = sametimelight.c
sametimelight_la_LDFLAGS = -module -avoid-version

placecapability_la_SOURCES = placecapability.c
placecapability_la_LDFLAGS = -module -avoid-version

walk_la_SOURCES = walk.c
walk_la_LDFLAGS = -module -avoid-version

perday_la_SOURCES = perday.c
perday_la_LDFLAGS = -module -avoid-version

freemorning_la_SOURCES = freemorning.c
freemorning_la_LDFLAGS = -module -avoid-version

holes_la_SOURCES = holes.c
holes_la_LDFLAGS = -module -avoid-version

preferredtime_la_SOURCES = preferredtime.c
preferredtime_la_LDFLAGS = -module -avoid-version

sameday_la_SOURCES = sameday.c
sameday_la_LDFLAGS = -module -avoid-version

consecutive_la_SOURCES = consecutive.c
consecutive_la_LDFLAGS = -module -avoid-version

timeblocks_la_SOURCES = timeblocks.c
timeblocks_la_LDFLAGS = -module -avoid-version

timeblocks_sameday_la_SOURCES = timeblocks_sameday.c
timeblocks_sameday_la_LDFLAGS = -module -avoid-version
