EXTRA_DIST = 	\
		sametime-1.xml \
		sametime-2.xml \
		sametime-3.xml \
		sametime-4.xml \
		timeplace-1.xml \
		placecapability-1.xml\
		error-1.xml\
		error-2.xml\
		error-3.xml\
		fixed-1.xml \
		freemorning-1.xml\
		freemorning-2.xml\
		holes-1.xml\
		holes-2.xml\
		perday-1.xml\
		preferredtime-1.xml\
		preferredtime-2.xml\
		sameday-1.xml\
		sameday-2.xml\
		sameday-3.xml\
		sameday-4.xml\
		walk-1.xml \
		consecutive-1.xml \
		consecutive-2.xml \
		freeperiod-1.xml \
		freeperiod-2.xml \
		freeperiod-3.xml \
		sametimeas-1.xml \
		sametimeas-2.xml \
		fixedtime-1.xml \
		fixedtime-2.xml \
		fixedtime-3.xml \
		preferredroom-1.xml \
		preferredroom-2.xml \
		preferredroom-3.xml \
		preferredroom-4.xml \
		events-sameday-1.xml \
		timeblocks-1.xml \
		timeblocks-sameday-1.xml \
		recurrence-1.xml \
		bug-consecutive-fixedtime-1.xml \
		bug-consecutive-fixedtime-2.xml \
		bug-sametimeas-1.xml \
		bug-sametimeas-2.xml \
		available-1.xml \
		simplesametime-1.xml \
		minrooms-1.xml \
		firstlastequal-1.xml \
		firstorlast-1.xml \
		maxconsecutive-1.xml \
		maxconsecutive-2.xml \
		maxconsecutive-3.xml \
		maxconsecutive-4.xml \
		maxperday-1.xml \
		maxperday-2.xml
